crates/weft-snapshots/tests/snapshots/react-jsx/corpus-data-table.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-data-table as react-jsx
---
import { Fragment } from "react";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _keyed(list) {
  return list.map((x, i) => <Fragment key={i}>{x}</Fragment>);
}

function _press(e, fire) {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="users" aria-label="Users">
      <h1 data-weft-id="title">Users</h1>
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-name" scope="col" aria-sort="ascending" tabIndex={0} onClick={() => _act(actions, { id: "col-name", action: "users.sort" })} onKeyDown={(_e) => _press(_e, () => _act(actions, { id: "col-name", action: "users.sort" }))}>Name</th>
          ),
          (
            <th data-weft-id="col-email" scope="col" aria-sort="none" tabIndex={0} onClick={() => _act(actions, { id: "col-email", action: "users.sort" })} onKeyDown={(_e) => _press(_e, () => _act(actions, { id: "col-email", action: "users.sort" }))}>Email</th>
          ),
          (
            <th data-weft-id="col-role" scope="col" aria-sort="none" tabIndex={0} onClick={() => _act(actions, { id: "col-role", action: "users.sort" })} onKeyDown={(_e) => _press(_e, () => _act(actions, { id: "col-role", action: "users.sort" }))}>Role</th>
          ),
          (
            <th data-weft-id="col-actions" scope="col">Actions</th>
          ),
          ..._list(data?.users).flatMap((user, _i0) => []),
        ];
        const _rows = [
          ..._list(data?.users).flatMap((user, _i0) => [
            (
              <tr data-weft-id={"row[" + _i0 + "]"}>
                <td data-weft-id={"cell-name[" + _i0 + "]"}>
                  <div data-weft-id={"user-name[" + _i0 + "]"}>
                    {!(_text(user?.name).trim() === "") ? _squash(_text(user?.name)) : ""}
                  </div>
                </td>
                <td data-weft-id={"cell-email[" + _i0 + "]"}>
                  <div data-weft-id={"user-email[" + _i0 + "]"}>
                    {!(_text(user?.email).trim() === "") ? _squash(_text(user?.email)) : ""}
                  </div>
                </td>
                <td data-weft-id={"cell-role[" + _i0 + "]"}>
                  <div data-weft-id={"user-role[" + _i0 + "]"}>
                    {!(_text(user?.role).trim() === "") ? _squash(_text(user?.role)) : ""}
                  </div>
                </td>
                <td data-weft-id={"cell-actions[" + _i0 + "]"}>
                  <button data-weft-id={"delete[" + _i0 + "]"} type="button" data-variant="danger" onClick={(_e) => _act(actions, { id: "delete[" + _i0 + "]", action: "users.delete", item: "$.users." + _i0 })}>Delete</button>
                </td>
              </tr>
            ),
          ]),
        ];
        return (
          <table data-weft-id="table" aria-label="Users">
            {_cols.length > 0 ? (
              <thead>
                <tr>
                  {_keyed(_cols)}
                </tr>
              </thead>
            ) : null}
            {_rows.length > 0 ? (
              <tbody>
                {_keyed(_rows)}
              </tbody>
            ) : null}
          </table>
        );
      })()}
    </main>
  );
}
